src/test/ui/feature-gates/feature-gate-cfi_name.stderr
error[E0658]: the `#[cfi_name]` attribute is an experimental feature
  --> $DIR/feature-gate-cfi_name.rs:4:1
   |
LL | #[cfi_name = "h"]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #89653 <https://github.com/rust-lang/rust/issues/89653> for more information
   = help: add `#![feature(cfi_name)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
